feat: agregar commit Acerca de

--- a/public/about.html
+++ b/public/about.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>🌍 Página "Acerca de"</h1>
-  <p>Esta página fue creada para practicar rutas con Express.</p>
+  <h1>Acerca de este sitio 🌍</h1>
+  <p>Este proyecto es una práctica con Node.js y Express para aprender sobre rutas, ramas y despliegue.</p>
   <a href="/">Volver al inicio</a>
 </body>
 </html>
